# DAA-Pr-ctica-7

./: .gitignore  prueba.txt
.github/workflows/: main.yml
include/: data.hpp  datos.hpp  grasp.hpp  greedy_TCT.hpp  greedy_time.hpp  gvns.hpp  machine.hpp  maquina.hpp  multiboot.hpp  parallelInterface.hpp  solucion.hpp  solution.hpp  tarea.hpp  task.hpp  testing.hpp  voraz.hpp
src/: CMakeLists.txt  data.cpp  datos.cpp  grasp.cpp  greedy_TCT.cpp  greedy_time.cpp  gvns.cpp  machine.cpp  main.cpp  maquina.cpp  multiboot.cpp  parallelInterface.cpp  solucion.cpp  solution.cpp  tarea.cpp  task.cpp  testing.cpp  voraz.cpp
test/: CMakeLists.txt  test.cpp
